--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<DOCTYPEHTML!>
+<DOCTYPEhtml!>
 <html>
 <head>
-  <link rel="stylesheet" href="Refer.css">
+<link rel="stylesheet" href="Refer.css">
 </head>
 <body>
 <p>Welcome Welcome Welcome</p>
